[package]
name = "brocade-rest-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.28"
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
entity = { path = "./entity" }
api = { path = "api" }
usecase = { path = "usecase" }
infra = { path = "infra" }

[workspace]
members = [".", "api", "entity", "infra", "migration", "usecase"]
