[package]
name = "brocade-rest-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.28"
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
api = { path = "./api" }
injection = { path = "./injection" }
util = { path = "./util" }

[workspace]
members = [
    ".",
    "api",
    "controller",
    "importer",
    "infra",
    "injection",
    "domain",
    "util",
]
