[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
controller = { path = "../controller" }
injection = { path = "../injection" }
