[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
local-ip-address = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
usecase = { path = "../usecase" }
util = { path = "../util" }

[dependencies.sea-orm-migration]
version = "0.12.15"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
 "runtime-async-std-native-tls",  "sqlx-sqlite"
]
